# User-Management

./: .gitignore  README.adoc  README.md  run.sh
backend/: index.js  package-lock.json  package.json
desktop/: CMakeLists.txt  authBackend.cpp  authBackend.h  simUi.cpp
desktop/qml/: Application.qml  AuthInput.qml  FieldInput.qml  LabelInput.qml  LoggingView.qml
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/authentication/: authentication.component.html  authentication.component.ts
frontend/src/app/authentications/: authentication_record.ts  authentications.component.css  authentications.component.html  authentications.component.ts
frontend/src/app/graphql/: graphql.queries.ts
frontend1/: angular.json  package-lock.json  package.json
frontend1/src/app/: app.component.ts  app.module.ts
frontend1/src/app/authentication/: authentication.component.css
frontend1/src/app/authentications/: authentications.component.html  authentications.component.ts
frontend1/src/app/graphql/: graphql.module.ts  graphql.queries.ts
protos/: auth.proto
server/: auth.proto  auth_client.js  auth_server.js  client.js  package-lock.json  server.js
wi-frontend/: package-lock.json  package.json
wi-frontend/src/: index.html
wi-frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
wi-frontend/src/app/authentication/: authentication.component.html  authentication.component.ts
wi-frontend/src/app/authentications/: authentication_record.ts  authentications.component.css  authentications.component.html  authentications.component.spec.ts  authentications.component.ts
